# threadloom

./: .gitignore  Cargo.toml  LICENSE  README.md  add_metadata.py  fix_all.py  fix_versions.py  refactor.py
benches/framework-benchmarks/dioxus-app/: Cargo.toml  index.html
benches/framework-benchmarks/dioxus-app/src/: main.rs
benches/framework-benchmarks/leptos-app/: Cargo.toml
benches/framework-benchmarks/leptos-app/src/: main.rs
benches/framework-benchmarks/nextjs-app/: package-lock.json  package.json
benches/framework-benchmarks/nextjs-app/app/: layout.jsx  page.jsx
benches/framework-benchmarks/react-app/: index.html  package-lock.json  package.json
benches/framework-benchmarks/react-app/src/: App.jsx
benches/framework-benchmarks/runner/: bench.js  bench_debug.js  dioxus-app_results.json  leptos-app_results.json  nextjs-app_results.json  package-lock.json  package.json  react-app_results.json  results.json  run_all.js  run_others.sh  tanstack-app_results.json  threadloom-app_results.json  yew-app_results.json
benches/framework-benchmarks/tanstack-app/: index.html  package-lock.json  package.json
benches/framework-benchmarks/tanstack-app/src/: App.jsx
benches/framework-benchmarks/threadloom-app/: Cargo.toml  index.html
benches/framework-benchmarks/threadloom-app/src/: main.rs
benches/framework-benchmarks/yew-app/: Cargo.toml
benches/framework-benchmarks/yew-app/src/: main.rs
benches/threadloom_vs_yew/runner/: bench.js  threadloom-app_results.json
benches/threadloom_vs_yew/threadloom-app/: Cargo.toml  index.html
benches/threadloom_vs_yew/threadloom-app/src/: main.rs
benches/threadloom_vs_yew/weave-app/: TODO.md
benches/threadloom_vs_yew/yew-app/: Cargo.toml  index.html
crates/distaff/: Cargo.toml  README.md
crates/distaff/android_java/com/threadloom/app/: Ipc.kt  Logger.kt  MainActivity.kt
crates/distaff/src/: adapter.rs  hot_patch.rs  hot_reload.rs  init.rs  main.rs  mod_gen.rs  plugins.rs  server.rs
crates/distaff/template/: .gitignore  Cargo.toml.tmpl  index.html  package-lock.json  package.json  tailwind.config.js
crates/distaff/template/assets/: tailwind.css
crates/distaff/template/src/: generated_svg.rs  main.rs  routes.rs  store.rs
crates/distaff/template/src/api/hello/: route.rs
crates/distaff/template/src/pages/index/: page.rs
crates/distaff/template/src/pages/not_found/: page.rs
crates/distaff/tests/: stress_tests.rs
crates/threadloom/: Cargo.toml  README.md
crates/threadloom-android/: Cargo.toml  README.md
crates/threadloom-android/src/: lib.rs
crates/threadloom-core/: Cargo.toml  README.md
crates/threadloom-core/src/: lib.rs
crates/threadloom-desktop/: Cargo.toml  README.md
crates/threadloom-desktop/src/: lib.rs
crates/threadloom-dom/: Cargo.toml  README.md  index.html
crates/threadloom-dom/src/: lib.rs  storage.rs  ws.rs
crates/threadloom-dom/tests/: stress_test.rs
crates/threadloom-macro/: Cargo.toml  README.md
crates/threadloom-macro/src/: lib.rs
crates/threadloom-scheduler/: Cargo.toml  README.md
crates/threadloom-scheduler/src/: lib.rs
crates/threadloom-scheduler/tests/: scheduler_test.rs
crates/threadloom-server/: Cargo.toml  README.md
crates/threadloom-server/src/: lib.rs
crates/threadloom-ui/: Cargo.toml  README.md  docs_injector.py
crates/threadloom-ui/src/: lib.rs  theme.css
crates/threadloom-ui/src/components/: data.rs  feedback.rs  form.rs  layout.rs  mod.rs  navigation.rs  text_fx.rs
crates/threadloom/src/: lib.rs
crates/threadloom/tests/: todo_mvc.rs  ui.rs
crates/threadloom/tests/compile_fail/: attribute_in_body.rs  attribute_in_body.stderr  bad_attribute.rs  bad_attribute.stderr  missing_braces.rs  missing_braces.stderr
examples/whiteboard/: .gitignore  AGENTS.md  Cargo.toml  index.html  package.json
examples/whiteboard/.zed/: settings.json
examples/whiteboard/android/: build.gradle  gradlew
examples/whiteboard/android/app/: build.gradle
examples/whiteboard/android/app/src/main/: AndroidManifest.xml
examples/whiteboard/android/app/src/main/java/com/threadloom/app/: PermissionHelper.kt  RustWebChromeClient.kt  RustWebView.kt  RustWebViewClient.kt  WryActivity.kt
examples/whiteboard/assets/: cursor.js  tailwind.css
examples/whiteboard/src/: api_routes.rs  db.rs  generated_svg.rs  lib.rs  main.rs  routes.rs  store.rs
examples/whiteboard/src/api/: mod.rs
examples/whiteboard/src/api/create_room/: route.rs
examples/whiteboard/src/api/delete_room/: route.rs
examples/whiteboard/src/api/join_room/: route.rs
examples/whiteboard/src/api/list_rooms/: route.rs
examples/whiteboard/src/api/login/: route.rs
examples/whiteboard/src/api/signup/: route.rs
examples/whiteboard/src/pages/: mod.rs
examples/whiteboard/src/pages/board/: client.rs  mod.rs  page.rs
examples/whiteboard/src/pages/index/: page.rs
examples/whiteboard/src/pages/login/: page.rs
examples/whiteboard/src/pages/not_found/: page.rs
examples/whiteboard/src/pages/signup/: page.rs
examples/whiteboard/src/ws/: handler.rs
template/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  test.rs  test2.rs
template/assets/: tailwind.css
template/src/: api_routes.rs  input.css  main.rs  routes.rs
template/src/api/hello/: route.rs
template/src/pages/: mod.rs
template/src/pages/index/: page.rs
template/src/pages/index/components/: demo.rs
template/src/pages/name/: page.rs
