[workspace]
resolver = "2"
members = [
    "crates/threadloom-server",
    "crates/threadloom-core",
    "crates/threadloom-macro",
    "crates/threadloom-scheduler",
    "crates/threadloom-dom",
    "crates/threadloom",
    "crates/distaff",

    "crates/threadloom-desktop", "crates/threadloom-ui",
    "crates/threadloom-android",
    "examples/*"
]
[profile.dev]
opt-level = 0
lto = false
debug = true

