[package]
name = "demo"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[package.metadata.packager]
product-name = "Threadloom App"
identifier = "com.threadloom.app"
resources = ["dist"]
icons = ["assets/icon.png", "assets/icon.ico"]

[dependencies]
threadloom = { path = "../crates/threadloom" }
serde = { version = "1.0", features = ["derive"] }
threadloom-core = { path = "../crates/threadloom-core" }
threadloom-macro = { path = "../crates/threadloom-macro" }
threadloom-dom = { path = "../crates/threadloom-dom" }
threadloom-ui = { path = "../crates/threadloom-ui" }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", "Location", "Response", "console", "History"] }
wasm-bindgen-futures = "0.4"
reqwasm = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
threadloom-desktop = { path = "../crates/threadloom-desktop" }


