[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "demo"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[[bin]]
name = "desktop"
path = "src/bin/desktop.rs"
required-features = ["desktop"]

[package.metadata.packager]
product-name = "Threadloom App"
identifier = "com.threadloom.app"
resources = ["dist"]
icons = ["assets/icon.png", "assets/icon.ico"]

[dependencies]
threadloom = { path = "../crates/threadloom", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
threadloom-core = { path = "../crates/threadloom-core", version = "0.1.0" }
threadloom-macro = { path = "../crates/threadloom-macro", version = "0.1.0" }
threadloom-dom = { path = "../crates/threadloom-dom", version = "0.1.0" }
threadloom-ui = { path = "../crates/threadloom-ui", version = "0.1.0" }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", "Location", "Response", "console", "History"] }
wasm-bindgen-futures = "0.4"
reqwasm = "0.5"
[features]
desktop = ["dep:threadloom-desktop"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
threadloom-desktop = { path = "../crates/threadloom-desktop", optional = true, version = "0.1.0" }
threadloom = { path = "../crates/threadloom", features = ["actix"], version = "0.1.0" }


