[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-desktop"
version = "0.1.1"
edition = "2024"

[dependencies]
wry = "0.40"
tao = "0.30"
tokio = { version = "1.0", features = ["full"] }
mime_guess = "2.0.5"
image = "0.25.10"
resvg = "0.41.0"
open = "5.3.6"
