[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-dom"
version = "0.1.13"
edition = "2021"
repository = "https://github.com/Parth3930/threadloom"
homepage = "https://github.com/Parth3930/threadloom"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlDocument", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", "Window", "Node", "Text", "History", "WebSocket", "MessageEvent"] }
threadloom-core = { path = "../threadloom-core", version = "0.1.1" }
threadloom-scheduler = { path = "../threadloom-scheduler", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dev-dependencies]
wasm-bindgen-test = "0.3"
