[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-macro"
version = "0.1.12"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
