[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-macro"
version = "0.1.14"
edition = "2021"
repository = "https://github.com/Parth3930/threadloom"
homepage = "https://github.com/Parth3930/threadloom"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
