[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-scheduler"
version = "0.1.1"
edition = "2024"

[dependencies]
threadloom-core = { path = "../threadloom-core", version = "0.1.1" }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
loom = "0.7"
