[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
actix = ["dep:actix-web", "dep:actix-rt"]
lambda = ["dep:lambda_http", "dep:tokio"]

[dependencies]
http = "1.0"

# Actix
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }

# Lambda
lambda_http = { version = "0.9", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
