[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-server"
version = "0.1.1"
edition = "2021"

[features]
default = []
actix = ["dep:actix-web", "dep:actix-rt"]
lambda = ["dep:vercel_runtime", "dep:tokio"]
vercel_runtime = ["dep:vercel_runtime"]

[dependencies]
http = "1.0"

# Actix
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }

# Lambda
lambda_http = { version = "0.9", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
vercel_runtime = { version = "=1.1.6", optional = true }
