[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-server"
version = "0.1.11"
edition = "2021"

[features]
default = []
actix = ["dep:actix-web", "dep:actix-rt"]
lambda = ["dep:vercel_runtime", "dep:tokio", "dep:hyper", "dep:http-body-util", "dep:tower"]
vercel_runtime = ["dep:vercel_runtime"]

[dependencies]
http = "1.0"

# Actix
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }

# Lambda / Vercel
tokio = { version = "1", features = ["full"], optional = true }
vercel_runtime = { version = "=2.3.0", optional = true }
hyper = { version = "1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true }
