[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
threadloom-core = { path = "../threadloom-core", version = "0.1.0" }
threadloom-macro = { path = "../threadloom-macro", version = "0.1.0" }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.103"

