[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom-ui"
version = "0.1.1"
edition = "2024"

[dependencies]
threadloom-core = { path = "../threadloom-core", version = "0.1.1" }
threadloom-macro = { path = "../threadloom-macro", version = "0.1.1" }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.103"

