[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom"
version = "0.1.1"
edition = "2021"

[dependencies]
threadloom-core = { path = "../threadloom-core", version = "0.1.1" }
threadloom-macro = { path = "../threadloom-macro", version = "0.1.1" }
threadloom-server = { path = "../threadloom-server", version = "0.1.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
threadloom-dom = { path = "../threadloom-dom", version = "0.1.1" }

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
actix = ["threadloom-server/actix"]
lambda = ["threadloom-server/lambda"]
