[package]
license = "MIT"
description = "A meticulously crafted Rust full-stack framework."
name = "threadloom"
version = "0.1.3"
edition = "2021"

[dependencies]
threadloom-core = { path = "../threadloom-core", version = "*" }
threadloom-macro = { path = "../threadloom-macro", version = "*" }
threadloom-server = { path = "../threadloom-server", version = "*" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
threadloom-dom = { path = "../threadloom-dom", version = "*" }

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
actix = ["threadloom-server/actix"]
lambda = ["threadloom-server/lambda"]
