[package]
name = "threadloom-app"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
threadloom-core = { path = "../../../crates/threadloom-core" }
threadloom-macro = { path = "../../../crates/threadloom-macro" }
threadloom-dom = { path = "../../../crates/threadloom-dom" }
wasm-bindgen = "0.2"
