[package]
name = "threadloom-app"
version = "0.1.0"
edition = "2024"

[dependencies]
threadloom-core = { path = "../../../crates/threadloom-core" }
threadloom-dom = { path = "../../../crates/threadloom-dom" }
threadloom-macro = { path = "../../../crates/threadloom-macro" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
